--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "boostrap": "^2.0.0",
+    "gh-pages": "^3.2.3",
     "marked": "^2.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
